bundle/manifests/cert-manager-operator-controller-manager-metrics-service_v1_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: cert-manager-operator-serving-cert
  creationTimestamp: null
  labels:
    app.kubernetes.io/created-by: cert-manager-operator
    app.kubernetes.io/instance: controller-manager-metrics-service
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: service
    app.kubernetes.io/part-of: cert-manager-operator
    control-plane: controller-manager
  name: cert-manager-operator-controller-manager-metrics-service
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  selector:
    control-plane: controller-manager
status:
  loadBalancer: {}
