bundle/manifests/allow-egress-to-api-server-operator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-api-server
  namespace: ${NAMESPACE}
spec:
  podSelector:
    matchLabels:
      name: cert-manager-operator
  policyTypes:
    - Egress
  egress:
    - ports:
        - protocol: TCP
          port: 6443
