bundle/manifests/allow-ingress-to-metrics-operator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-to-api-and-from-metrics
spec:
  podSelector:
    matchLabels:
      name: cert-manager-operator
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 8443
